content/_generated-doc/2.7/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-agroal-config-group-data-source-jdbc-build-time-config_configuration]]link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc[quarkus.datasource.jdbc]`

[.description]
--
If we create a JDBC datasource for this datasource.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.driver]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.driver[quarkus.datasource.jdbc.driver]`

[.description]
--
The datasource driver class name
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.transactions]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.transactions[quarkus.datasource.jdbc.transactions]`

[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities. 
 When enabling XA you will need a driver implementing `javax.sql.XADataSource`.
--|`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.enable-metrics]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.enable-metrics[quarkus.datasource.jdbc.enable-metrics]`

[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc[quarkus.datasource."datasource-name".jdbc]`

[.description]
--
If we create a JDBC datasource for this datasource.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.driver]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.driver[quarkus.datasource."datasource-name".jdbc.driver]`

[.description]
--
The datasource driver class name
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transactions]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transactions[quarkus.datasource."datasource-name".jdbc.transactions]`

[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities. 
 When enabling XA you will need a driver implementing `javax.sql.XADataSource`.
--|`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.enable-metrics]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.enable-metrics[quarkus.datasource."datasource-name".jdbc.enable-metrics]`

[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.
--|boolean 
|

|===