content/_generated-doc/2.13/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc

:summaryTableId: quarkus-agroal-config-group-data-source-jdbc-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-agroal-config-group-data-source-jdbc-build-time-config_configuration]]link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc[quarkus.datasource.jdbc]`

[.description]
--
If we create a JDBC datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.driver]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.driver[quarkus.datasource.jdbc.driver]`

[.description]
--
The datasource driver class name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_DRIVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_DRIVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.transactions]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.transactions[quarkus.datasource.jdbc.transactions]`

[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities. 
When enabling XA you will need a driver implementing `javax.sql.XADataSource`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++`
endif::add-copy-button-to-env-var[]
-- a|
`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.enable-metrics]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.enable-metrics[quarkus.datasource.jdbc.enable-metrics]`

[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.tracing]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.jdbc.tracing[quarkus.datasource.jdbc.tracing]`

[.description]
--
Enable JDBC tracing. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRACING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc[quarkus.datasource."datasource-name".jdbc]`

[.description]
--
If we create a JDBC datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.driver]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.driver[quarkus.datasource."datasource-name".jdbc.driver]`

[.description]
--
The datasource driver class name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DRIVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DRIVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transactions]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transactions[quarkus.datasource."datasource-name".jdbc.transactions]`

[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities. 
When enabling XA you will need a driver implementing `javax.sql.XADataSource`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTIONS+++`
endif::add-copy-button-to-env-var[]
-- a|
`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.enable-metrics]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.enable-metrics[quarkus.datasource."datasource-name".jdbc.enable-metrics]`

[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ENABLE_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ENABLE_METRICS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.tracing]]`link:#quarkus-agroal-config-group-data-source-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.tracing[quarkus.datasource."datasource-name".jdbc.tracing]`

[.description]
--
Enable JDBC tracing. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===